# shuttlings-cch24

./: Cargo.toml  Shuttle.toml
.cargo/: config.toml
.sqlx/: query-2350f772260c01a75704da65bba3432f2df36941f99ad57e9474e03304e47ddc.json  query-77ba5e6d574e615b2d788f436d04fe617043ace117e0d831f75fcd5447f84dd7.json  query-7bde780c7484e826ad04152de16fb59449603ec3a474a7fc23606bf370c1dcc0.json  query-a0817c6b244c307964cc0b632ff7937cf90199578a096fe2dfd8a00d7527b224.json
integrations/shuttlings-cch24/: bruno.json
integrations/shuttlings-cch24/Day -1/: Task 1: Hello, bird!.bru  Task 2: Seek and you will find.bru
integrations/shuttlings-cch24/Day 19/: folder.bru
integrations/shuttlings-cch24/Day 19/Task 1: Candlelight Reveals Unread Delights/: cite.bru  draft.bru  folder.bru  list.bru  list_next.bru  list_next_2.bru  remove.bru  reset.bru  undo.bru
integrations/shuttlings-cch24/Day 2/: Task 1: Egregious Encryption.bru  Task 2: Going the other way.bru  Task 3.1: What happened to version 5?.bru  Task 3.2: What happened to version 5?.bru  folder.bru
integrations/shuttlings-cch24/template/: Task.bru  folder.bru
migrations/: 000001_init.sql
src/: day_02.rs  day_05.rs  day_09.rs  day_12.rs  day_16.rs  day_19.rs  day_23.rs  lib.rs  main.rs  negone.rs  template.rs  two.rs
