[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["query"] }
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["rc", "derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
tracing = "0.1.41"

[dev-dependencies]
rstest = "0.23.0"
test-log = { version = "0.2.16", features = ["trace"] }
