[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["query"] }
cargo-manifest = "0.17.0"
indexmap = "2.7.0"
itertools = "0.13.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["rc", "derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
toml = "0.8.19"
tracing = "0.1.41"

[dev-dependencies]
rstest = "0.23.0"
test-log = { version = "0.2.16", features = ["trace"] }
axum-test = { version = "16.4.0", features = ["shuttle"] }
